fix: swagger tags
